return first,last name in /user/driving-licenses/{nationalCode}/{mobile} endpoint
